before moving payment
